# up4

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  3D_quiver.py  Cargo.toml  README.md  about.html  build-wheels.sh  contributing.html  genindex.html  getting_started.html  index.html  json.txt  main.rs  objects.inv  plotly_playground.py  py-modindex.html  pyproject.toml  quiver_funcs.rs  requirements.txt  requirements_test.txt  search.html  searchindex.js  setup.py  test.html  test.py  test.py.tmp  vectorfields_subplot.py
.github/workflows/: build-test-rust.yml  docs-check-python.yml  docs-deploy-rust.yml  install_miniconda.sh  lint-python.yml  main.yaml  pages.yaml  pages.yml  test-python.yml
_modules/: index.html
_modules/up4/: grid.html  plotting.html
_sources/: about.rst.txt  getting_started.rst.txt  index.rst.txt
_sources/api/: converter.rst.txt  data.rst.txt  grid.rst.txt  plotting.rst.txt  utilities.rst.txt
_sources/tutorials/: basic_tutorial.rst.txt  conditional_analysis.rst.txt  converting.rst.txt  grid_tutorial.rst.txt  index.rst.txt  mixing.rst.txt  scalar_fields.rst.txt  vector_plots.rst.txt
_static/: documentation_options.js
_static/doc/: crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
api/: converter.html  data.html  grid.html  index.html  plotting.html  utilities.html
autopy/: README.md
docs/: .gitignore  Makefile  conf.py  index.rst  make.bat  requirements.txt
docs/api/: data.rst  grid.rst  index.rst
docs/manual/: index.rst
docs/source/: about.rst  conf.py  index.rst  requirements.txt
docs/tutorials/: index.rst
doctrees/: about.doctree  getting_started.doctree  index.doctree
doctrees/api/: converter.doctree  data.doctree  grid.doctree  index.doctree  plotting.doctree  utilities.doctree
doctrees/tutorials/: index.doctree
examples/: .gitignore  drum.hdf5  makehdf5.py  mytestfile.hdf5  read_plot.py  vector_fields.rs  vector_plots.rs
html/: .buildinfo  getting_started.html
html/_sources/: about.rst.txt
html/api/: data.html  plotting.html
pyAnalyser/: __init__.py  base.py  converter.py  plot.py  recovery.py
src/: base.rs  comparison.rs  converter.rs  datamanager.rs  functions.rs  grid.rs  lib.rs  main.rs  particleselector.rs  plot.rs  plotting.rs  py.rs  pylib.rs  quiver_funcs.rs  types.rs  utilities.rs
src/base/: converter.rs  grid.rs
src/converter/: convertertools.rs  csv_modes.rs  vtktools.rs  vtutools.rs  xmltools.rs
src/datamanager/: pdata.rs  tdata.rs  utilities.rs
src/functions/: conditional.rs  extractions.rs  (+2 more)
test/: test.py  vectorfield.txt
tests/: conftest.py  test-interface.py  test.py  test_all.py
tutorials/: basic_tutorial.html  conditional_analysis.html  converting.html  dataset_comparison.html  grid_tutorial.html  index.html  mixing.html  scalar_fields.html  scalar_plots.html  vector_plots.html
uPPPP.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
up4/: __init__.py  __version__.py  dummy.py  grid.py  plotting.py
(+366 files in other folders)
